@@ -3,7 +3,9 @@ import numpy as np
 
 from sklearn import preprocessing # For MinMax scale
 import matplotlib.pyplot as plt
+import os
 import tensorflow as tf
+os.environ['TF_CPP_MIN_LOG_LEVEL'] = '3'
 import time
 
 
@@ -13,7 +15,8 @@ from keras.callbacks import Callback, EarlyStopping, TensorBoard, ModelCheckpoin
 from keras import optimizers
 
 import data_loader
-
+import preprocessing3 as proc
+from sklearn.externals import joblib
 from sacred import Experiment
 
 import datetime
@@ -51,41 +54,41 @@ options = {
     "num_features": 15,
     "lr": 0.01, # 0.003 # not assigned in Takuragi paper
     "clip": 5,
-    "epochs": 200,
+    "epochs": 1, #60
     "out_features": 82,
     "gru": 128,
     "seed": 10,
     "noise": 0,
     "delay": 1, # 25 
     "batch_size": 45, #90
-    "percentage": 1
+    "percentage": 1,
+    "k": 0,
+    "total_samples": 2274,
+    "save_dir": "processed_comb2_filtered_2"
 }
 
 ex.add_config(options)
 
-@ex.automain
+@ex.main
 def my_main(_config,_run):
 
     options = _config
-
+    total_samples = options["total_samples"]
+    train_size = int(np.ceil(total_samples * 0.8))
+    val_size = total_samples - train_size
+    
     # Learning curve storage
     learning_curve = np.zeros((options["epochs"]))
     
-    # Some hard-coded parameters
-
-    ema_train, ema_test, \
-        sp_train, sp_test, \
-        scaler_sp = data_loader.load_data(options["delay"],
-                                   options["percentage"])
-
-    # Extract feature number for convenience
-
     tb = TensorBoard(log_dir="logs/" +
                      date_string +
                      "_" +
                      str(options["noise"]))
 
-    mc = ModelCheckpoint("checkpoints/model_sp_comb_lstm_d.hdf5" ,
+    
+    mc = ModelCheckpoint("checkpoints/model_sp_comb_lstm_fold_" +
+                         str(options["k"]) +
+                         ".hdf5",
                          save_best_only=True)
 
     model = model_blstm2.LSTM_Model(options)    
@@ -95,23 +98,43 @@ def my_main(_config,_run):
     model.trainer.compile(optimizer=rmsprop_optimiser, loss="mse")
 
     try:
-        model.trainer.fit(ema_train,
-                          sp_train,
-                          validation_data=(ema_test,sp_test),
-                      epochs=options["epochs"],
-                      batch_size=options["batch_size"],
-                      callbacks=[LossHistory(_run,learning_curve),
-                                 mc,
-                                 tb])
+        train_gen = data_loader.DataGenerator(options,True,True)
+        val_gen = data_loader.DataGenerator(options,False,True)
+
+        model.trainer.fit_generator(generator=train_gen,
+                                    validation_data = val_gen,
+                                    epochs=options["epochs"],
+                                    callbacks=[tb,
+                                              mc,
+                                              LossHistory(_run,learning_curve)])
+        
     except KeyboardInterrupt:
         print("Training interrupted")
 
-    sp_test_hat = model.trainer.predict(ema_test)
+    model = load_model("checkpoints/model_sp_comb_lstm_fold_" +
+                       str(options["k"]) +
+                           ".hdf5")
 
-    for k in range(len(scaler_sp)):
-        sp_test_hat[:,:,k] = scaler_sp[k].inverse_transform(sp_test_hat[:,:,k])
-        sp_test[:,:,k] = scaler_sp[k].inverse_transform(sp_test[:,:,k])
 
-    MCD_all = str(melcd(sp_test_hat,sp_test))
+    options2 = options
+    options2["batch_size"] = 227
+    val_gen = data_loader.DataGenerator(options2,False,False)
+    sp_test_hat = model.predict_generator(val_gen)
+    _, sp_test = val_gen.__getitem__(0)
+
+    print(sp_test.shape)
+    scaler_sp = joblib.load(options["save_dir"] + '/scaler_sp_.pkl')
+
+    # Perform MLPG
+    mlpg_generated = proc.mlpg_postprocessing(sp_test_hat,
+                                          41,
+                                          scaler_sp)
+
+    sp_test_u = np.copy(sp_test_hat)
+    for i in range(len(scaler_sp)):
+        sp_test_u[:,:,i] = scaler_sp[i].inverse_transform(sp_test[:,:,i])
+    
+    MCD_all = str(melcd(mlpg_generated,sp_test_u[:,:,:41]))
+
     print("MCD (dB) (nmkwii)" + MCD_all)
     return MCD_all
